OCD display cleanup

--- a/docs/_ioc_2025.md
+++ b/docs/_ioc_2025.md
@@ -2,4 +2,5 @@
 
 <!-- docs:hide_photos -->
 
-International Open Championships (IOC) for 2025 is regrefully canceled. Stay tuned for details about the next IOC.
+International Open Championships (IOC) for 2025 is regretfully canceled.
+Stay tuned for details about the next IOC.
